proj1/tests/correct/typeArguments.py
class B:
    pass

class A of [$D, $B]:
    def str(self):
        return 'str'
print A().str()

