proj1/tests/error/typeArguments.py
class A of [B]:
    pass
print 'str'

